Fixed dark mode by removing global css code.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,16 @@
 @import "tailwindcss";
 
-html {
+
+html,
+body {
   background-color: #ffffff;
   color: #000000;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 
-:root {
+
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -29,4 +33,4 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
